# liuantum-agentic-os

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  data-analytics.md  liuant  pyproject.toml  pytest.py  release.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
cli/: liuant.py
docs/: AGENT_RUNTIME.md  API.md  AUTH.md  AUTOMATIONS.md  BACKUP.md  BUDGETS_AND_ALERTS.md  CHAT_FIRST_UX.md  CLEANUP_SCHEDULER.md  CONNECTORS.md  DESKTOP_PACKAGING.md  DESKTOP_WORKFLOW_UI.md  DISCUSSION_COSTS.md  DISCUSSION_MODE.md  DISCUSSION_STREAMING.md  EMAIL.md  ICONS.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  KNOWLEDGE_BASE.md  KNOWN_LIMITATIONS.md  MACOS_SIGNING_NOTARIZATION.md  MACOS_UNSIGNED_INSTALL_QA.md  MEMORY.md  MINIMAL_UI.md  MODEL_ROLES.md  NATIVE_BUILD.md  OFFICIAL_WORKFLOW_EXAMPLES.md  OPEN_SOURCE.md  PACKAGING.md  PACK_LINT_SAFE_FIXES.md  PROVIDERS.md  PROVIDER_SETUP.md  PUBLIC_RELEASE_CHECKLIST.md  RAG.md  RELEASE.md  RELEASE_NOTES_V3_1_0.md  SCHEDULER.md  SCREENSHOTS_AND_DEMOS.md  SECRETS.md  SECURITY.md  (+36 more)
installer/: README.md  install_linux.sh  install_macos.sh  install_windows.ps1  package_linux.sh  package_macos.sh  package_windows.ps1  uninstall_linux.sh  uninstall_windows.ps1
release/: README.md  checksums.json  manifest.json
runtime/: __init__.py  action_log.py  backup.py  config.py  content_creator.py  dashboard.py  db.py  (+13 more)
(+261 files in other folders)
