[project]
name = "liuant-agentic-os"
version = "1.0.0"
description = "Local-first AI agent operating system."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.27", "pytest>=8.0", "rich>=13.7"]

[project.optional-dependencies]
sidecar = ["pyinstaller"]

[project.scripts]
liuant = "cli.liuant:main"
