[project]
name = "liuant-agentic-os"
version = "1.3.0"
description = "Local-first AI agent operating system."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.27", "pytest>=8.0", "rich>=13.7"]

[project.optional-dependencies]
sidecar = ["pyinstaller"]

[project.scripts]
liuant = "cli.liuant:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["runtime*", "cli*", "sidecar*"]
exclude = [
  "apps*",
  "ui*",
  "release*",
  "installer*",
  "docs*",
  "tests*",
  "workspace*",
]
